@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Implement inequality on weakref.WeakSet.
+
 - Issue #17981: Closed socket on error in SysLogHandler.
 
 - Issue #17754: Make ctypes.util.find_library() independent of the locale.
